--- a/public/css/style.css
+++ b/public/css/style.css
@@ -704,6 +704,28 @@ footer{
   margin-top: 30px;
 }
 
+.load-stop{
+  position: fixed;
+  top: 0;
+  width:100%;
+  height: 100%;
+  background-color: #cacaca90;
+  z-index: 10000;
+}
+
+.load-stop div{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width:100%;
+  height: 100%;
+}
+
+.load-stop div img{
+  width:100px;
+  height:100px;
+}
+
 /*************************
 	QUERIES
 *********/
