resposta - Nenhum resultado

--- a/public/templates/default-book-view.html
+++ b/public/templates/default-book-view.html
@@ -71,17 +71,18 @@
           <!--<li class="fnav-item cmdSave"><a href="#"><span class="icon"><i class="fa fa-download"  title="<$tr>Download</$tr>"></i></span></a></li>-->
           <li class="fnav-item cmdPrint"><a href="#"><span class="icon"><i class="fa fa-print"  title="<$tr>Imprimir</$tr>"></i></span></a></li>
           <li class="fnav-item cmdFullScreen"><a href="#"><span class="icon"><i class="fa fa-arrows-alt" title="<$tr>Tela inteira</$tr>"></i></span></a></li>
-          <li class="dropup fnav-item toggle widSettings">
+          <!--<li class="dropup fnav-item toggle widSettings">
             <a href="#"><div class="icon-caret"><span class="icon"><i class="fa fa-cog" title="<$tr>Settings</$tr>"></i> <i class="caret"></i></span></div></a>
             <ul class="menu hidden">
               <li  class="cmdSmartPan"><a href="#"><span class="icon"><i class="fa fa-eye"></i></span> <$tr>Paleta principal</$tr></a></li>
-              <li  class="cmdSinglePage"><a href="#"><span class="icon"><i class="fa fa-file-o"></i></span> <$tr>Uma página</$tr></a></li>
-              <!--<li  class="cmdSounds"><a href="#"><span class="icon"><i class="fa fa-volume-up"></i></span> <$tr>Sons</$tr></a></li>-->
+              <li  class="cmdSinglePage"><a href="#"><span class="icon"><i class="fa fa-file-o"></i></span> <$tr>Uma oi aquipágina</$tr></a></li>
+              <li  class="cmdSounds"><a href="#"><span class="icon"><i class="fa fa-volume-up"></i></span> <$tr>Sons</$tr></a></li>
               <li class="divider"></li>
-              <li  class="cmdLightingUp"><a href="#"><span class="icon"><i class="fa fa-chevron-up"></i></span> <$tr>Aumentar luz</$tr></a></li>
-              <li  class="cmdLightingDown"><a href="#"><span class="icon"><i class="fa fa-chevron-down"></i></span> <$tr>Reduzir luz</$tr></a></li>
+              
             </ul>
-          </li>
+          </li>-->
+          <li  class="fnav-item cmdLightingUp"><a href="#"><span class="icon"><i class="fa fa-chevron-up" title="<$tr>Aumentar Brilho</$tr>">&#9728;</i></span></a></li>
+          <li  class="fnav-item cmdLightingDown"><a href="#"><span class="icon"><i class="fa fa-chevron-down" title="<$tr>Reduzir Brilho</$tr>">&#9728;</i></span></a></li>
         </ul>
       </nav>
     </div>
