--- a/public/templates/default-book-view.html
+++ b/public/templates/default-book-view.html
@@ -81,8 +81,21 @@
               
             </ul>
           </li>-->
-          <li  class="fnav-item cmdLightingUp"><a href="#"><span class="icon"><i class="fa fa-chevron-up" title="<$tr>Aumentar Brilho</$tr>">&#9728;</i></span></a></li>
-          <li  class="fnav-item cmdLightingDown"><a href="#"><span class="icon"><i class="fa fa-chevron-down" title="<$tr>Reduzir Brilho</$tr>">&#9728;</i></span></a></li>
+          <li  class="fnav-item cmdLightingUp">
+            <a href="#">
+              <span class="icon">
+                <i class="icon-brightness-up" title="<$tr>Aumentar Brilho</$tr>"></i>
+              </span>
+            </a>
+          </li>
+          <li class="fnav-item cmdLightingDown">
+            <a href="#">
+              <span class="icon">
+                <i class="icon-brightness-down" title="<$tr>Reduzir Brilho</$tr>"></i>
+                </i>
+              </span>
+            </a>
+          </li>
         </ul>
       </nav>
     </div>
