--- a/public/css/short-white-book-view.css
+++ b/public/css/short-white-book-view.css
@@ -1,3 +1,48 @@
+@font-face {
+  font-family: "untitled-font-5";
+  src:url("../fonts/fonts/untitled-font-5.eot");
+  src:url("../fonts/fonts/untitled-font-5.eot?#iefix") format("embedded-opentype"),
+    url("../fonts/fonts/untitled-font-5.woff") format("woff"),
+    url("../fonts/fonts/untitled-font-5.ttf") format("truetype"),
+    url("../fonts/fonts/untitled-font-5.svg#untitled-font-5") format("svg");
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+[data-icon]:before {
+  font-family: "untitled-font-5" !important;
+  content: attr(data-icon);
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+[class^="icon-"]:before,
+[class*=" icon-"]:before {
+  font-family: "untitled-font-5" !important;
+  font-style: normal !important;
+  font-weight: normal !important;
+  font-variant: normal !important;
+  text-transform: none !important;
+  speak: none;
+  line-height: 1;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.icon-brightness-down:before {
+  content: "\61";
+}
+.icon-brightness-up:before {
+  content: "\62";
+}
+
 .flip-book {
   position: relative;
   height: 100%;
@@ -149,15 +194,6 @@
 
 .flip-book .controls {
   position: relative;
-}
-
-.flip-book .controls .fnavbar {
-  margin: 0 auto;
-  opacity: 1;
-}
-
-.flip-book .controls .fnavbar:hover {
-  opacity: 1;
 }
 
 .flip-book .controls .ctrl {
@@ -594,13 +630,13 @@
 
 .flip-book .controls .fnavbar {
   margin: 0 auto;
-  opacity: 1;
-  transition: opacity 2s ease-in-out 3s;
+  opacity: 0.5;
+  transition: opacity 0.5s ease-in-out 0.5s;
 }
 
 .flip-book .controls .fnavbar:hover {
   opacity: 1;
-  transition: opacity 1s ease;
+  transition: opacity 0.5s ease;
 }
 
 .flip-book .controls .ctrl {
