--- a/public/css/style.css
+++ b/public/css/style.css
@@ -151,6 +151,71 @@ logo-fix {
 .queroassinararea a:hover {
   color: #094945;
 }
+
+.jumbotron {
+  padding: 4rem 2rem 0;
+}
+
+.assinaranchor {
+  text-align: center;
+  padding: 30px 0 20px;
+}
+
+.assinaranchor {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+.assinaranchor {
+    -webkit-animation: mover 1s infinite  alternate;
+    animation: mover 1s infinite  alternate;
+}
+
+@-webkit-keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+@keyframes mover {
+    0% { transform: translateY(0); }
+    100% { transform: translateY(-10px); }
+}
+
+.scrollTo {
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
+  font-size: 1.5em;
+  padding: 5px 20px;
+  border-radius: 5px;
+  transition: .25s ease-in-out;
+  -moz-transition: .25s ease-in-out;
+  -webkit-transition: .25s ease-in-out;
+}
+
+.scrollTo:hover {
+  background-color: white;
+  color: #169990;
+}
+
+#queroassinar .btn-primary {
+  padding: 10px 25px;
+  color: #fff;
+  font-size: 1em;
+  margin-bottom: 5px;
+}
+
+#queroassinar .lead {
+  margin-bottom: 30px;
+}
+
+.footerlogin {
+  background-color: #e9e9e9;
+  width: 100%;
+  padding: 20px 0;
+}
+
+.card {
+  margin-bottom: 60px !important;
+}
 /* OLD VERSION */
 
 .loginside {
@@ -1034,6 +1099,10 @@ and (max-width: 767px) {
  .card-center-heigh {
     left: 20%;
     transform: translate(-13%, -50%);
+ }
+
+ .footerlogin {
+  text-align: center;
  }
 
 }
